--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine On
 # Si le fichier auquel on tente d'accéder existe (si on veut accéder à une image par exemple).
 # Alors on ne réécrit pas l'URL.
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php?app=Frontend [QSA,L]
+RewriteRule ^(.*)$ index.php?app=Blog/FrontEnd [QSA,L]
