--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,25 @@
 {
-
     "name": "blog",
     "description": "projet de cour",
     "homepage": "http://projet5.survive-in-hell.fr",
+      "authors": [
+    {
+      "name": "Adam Piotrowski",
+      "email": "sqdqds@fdggdfdgf.fr"
+    },
+    {
+      "name": "WellCommerce Developers",
+      "email": "developers@wellcommerce.org"
+    }
+  ],
+  "support": {
+    "email": "support@wellcommerce.org",
+    "issues": "https://github.com/WellCommerce/WellCommerce/issues",
+    "source": "https://github.com/WellCommerce/WellCommerce/"
+  },
 
     "require": {
         "twig/twig": "^2.0",
-        "swiftmailer/swiftmailer": "^6.1"
+        "swiftmailer/swiftmailer": "^6.1",
     }
 }
