--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "blog",
+    "name": "tp/blog",
     "description": "projet de cour",
     "homepage": "http://projet5.survive-in-hell.fr",
  	"author": "dictateurfou",
