--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,26 @@
 {
     "name": "blog",
     "description": "projet de cour",
+    "license": "MIT",
+   	"authors": [
+        {
+            "name": "Nils Adermann",
+            "email": "naderman@naderman.de",
+            "homepage": "http://www.naderman.de",
+            "role": "Developer"
+        },
+        {
+            "name": "Jordi Boggiano",
+            "email": "j.boggiano@seld.be",
+            "homepage": "https://seld.be",
+            "role": "Developer"
+        }
+    ],
+ 	"support": {
+        "email": "support@example.org",
+        "irc": "irc://irc.freenode.org/composer"
+    },
+
     "require": {
         "twig/twig": "^2.0",
         "swiftmailer/swiftmailer": "^6.1"
